# vizier

./: .gitignore  AGENTS.md  CODE_REVIEW.md  Cargo.toml  DEVELOP.md  GEMINI.md  JOBS.md  MAN.md  MIGRATE.md  ONTOLOGY.md  OPT.md  README.md  REFACTOR.md  RUNTIME.md  VIZIER-SKILL.md  WATCH.md  cicd.sh  example-config.toml  install.sh
.github/workflows/: integration-tests.yml  release  release.yml  rust.yml
.vizier/: .snapshot  agent_basic_command_mvp.md  agent_workflows_human_in_the_loop_survey_and_pilots.md  agents_md_schema_and_interop_contract.md  bootstrap_snapshot_from_existing_repo  cli_control_levers_llm_and_history.md  config.toml  develop.hcl  develop.toml  enhance_tui_interaction.md  enhance_version_control_composability.md  integration_test_coverage  minimal_invasive_tui_and_renderer_neutral_surface  minimal_invasive_tui_and_renderer_neutral_surface.md  native_chat_diff_editing_ux.md  post_action_outcome_summaries_across_tui_cli_and_assistant.md.md  process_sync_narrative_with_code_bidirectional_flow.md  stdout_stderr_contract_and_verbosity  stdout_stderr_contract_and_verbosity.md  thinking_level_config_and_persistence  todo.md  todo_.snapshot.md  todo_AGENTS_md_anchor_to_readme_until_spec.md  todo_README_add_approve_command.md  todo_README_identity_and_capabilities_header.md  todo_add_confirmation_gate_before_commits_and_toolside_effects.md  todo_agent_basic_command_mvp  todo_agent_basic_command_mvp.md  todo_agent_command_cicd_gate.md  todo_agent_workflow_orchestration.md  todo_agent_workflows_human_in_the_loop_survey_and_pilots  todo_agent_workflows_human_in_the_loop_survey_and_pilots.md  todo_agents_md_schema_and_interop_contract  todo_agents_md_schema_and_interop_contract.md  todo_architectural_invariants_prompting_and_surfaces.md  todo_architecture_doc_gate_and_commit_history.md  todo_architecture_docs_scaffold_and_prompt_catalog.md  todo_bootstrap_snapshot_from_existing_repo.md  todo_chat_tui_auditor_integration_and_commit_gate.md  todo_chat_tui_polish_navigation_loading_and_tool_visuals.md  (+41 more)
.vizier/implementation-plans/: agent-resolve.md  better-scripting.md  codex-cli-output.md  codex-output.md  codex-rename-1.md  commit-flag.md  config-collapse.md  config-refinement.md  convo.md  default.md  documentation.md  flow-docs.md  gemini-adapter.md  here-s-a-scenario-1-merge-confli.md  impl.md  jobs.md  kernel-commits-1.md  let-s-add-a-cicd-gate-to.md  list-prettify.md  list.md  merge-conflicts.md  merge-headers.md  more-tokens.md  no-wire-1.md  prettify.md  prompt-config.md  prompt-scoping.md  refactor.md  removing-codex-1.md  removing-plan-metadata.md  removing-wire.md  reviews.md  run.md  single-commit-1.md  squashing.md  templates.md  the-current-tui-with-codex-just.md  the-unit-tests-need-to-be.md  tokens.md  (+12 more)
cli/: Cargo.toml
cli/src/: auditor.rs  config.rs  file_tracking.rs  main.rs  tools.rs  tree.rs  walker.rs
dewey/: Cargo.toml
dewey-macros/: Cargo.toml
dewey/src/: cache.rs  config.rs  dbio.rs  hnsw.rs  lib.rs  network.rs  serialization.rs
docs/: code-organization.md  config-reference.md  installation.md  prompt-config-matrix.md  scheduler-dag.md  testing.md
prompts/: Cargo.toml
prompts/src/: file_tracking.rs  lib.rs  tools.rs  walker.rs
specs/: APPROVE.md  APPROVE_PROMPTS.md  DEFAULT.md  DRAFT.md  MERGE.md  PRIMITIVE_STAGE_TEMPLATES.md
src/: main.rs
test-repo/: .gitignore
tests/: Cargo.toml
tui/: Cargo.toml
tui/src/: chat.rs  lib.rs
vcs/: Cargo.toml
vizier-cli/: Cargo.toml
vizier-cli/src/: actions.rs  completions.rs  context.rs  errors.rs  jobs.rs  lib.rs  main.rs  man.rs  plan.rs  workflow_templates.rs  workspace.rs
vizier-cli/src/actions/: approve.rs  ask.rs  audit.rs  build.rs  draft.rs  gates.rs  init.rs  list.rs  merge.rs  mod.rs  patch.rs  plan.rs  refine.rs  release.rs  review.rs  run.rs  save.rs  shared.rs  snapshot_init.rs  test_display.rs  types.rs  workflow_preflight.rs  workflow_runtime.rs
vizier-cli/src/cli/: args.rs  dispatch.rs  help.rs  jobs_view.rs  mod.rs  prompt.rs  resolve.rs  scheduler.rs  util.rs
vizier-cli/templates/init/: ci.sh  config.toml
vizier-cli/templates/init/prompts/: APPROVE_PROMPTS.md  COMMIT_PROMPTS.md  DRAFT_PROMPTS.md  MERGE_PROMPTS.md
vizier-cli/templates/init/workflows/: approve.hcl  approve.toml  commit.hcl  commit.toml  draft.hcl  draft.toml  merge.hcl  merge.toml
vizier-core/: Cargo.toml
vizier-core/src/: agent.rs  agent_prompt.rs  auditor.rs  bootstrap.rs  chat.rs  codex.rs  config.rs  display.rs  editor.rs  file_tracking.rs  gemini.rs  lib.rs  observer.rs  plan.rs  prompting.rs  tools.rs  tree.rs  vcs.rs  walker.rs
vizier-core/src/config/: defaults.rs  driver.rs  load.rs  merge.rs  mod.rs  prompts.rs  schema.rs  validate.rs
vizier-core/src/jobs/: cleanup.rs  graph.rs  logs.rs  mod.rs  monitor.rs  scheduler.rs
vizier-core/src/jobs/tests/: mod.rs
vizier-core/src/jobs/workflow/: compile.rs  control.rs  executor.rs  mod.rs  runtime.rs
vizier-core/src/scheduler/: mod.rs
vizier-core/src/vcs/: branches.rs  commits.rs  merge.rs  mod.rs  release.rs  remotes.rs  status.rs  tests.rs  worktrees.rs
vizier-core/src/workflow_audit/: mod.rs
vizier-core/src/workflow_template/: mod.rs
vizier-core/tests/: jobs_api.rs
vizier-hcl-rs/: Cargo.toml
vizier-kernel/: Cargo.toml
vizier-macros/: Cargo.toml
vizier-tui/: Cargo.toml
(+251 files in other folders)
