[package]
name = "vizier"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = "0.35.0"
sqlite-vec = "0.1.6"
zerocopy = "0.8.25"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
vizier-macros = { path = "../vizier-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3"
wire = { git = "https://github.com/JTan2231/wire.git" }
tokio = { version = "1", features = ["full"] }
