[package]
name = "dewey"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Z", "macro-backtrace"]

[build-dependencies]
cc="*"

[lib]
name = "dewey_lib"
path = "src/lib.rs"

[features]
verbose = []

[dependencies]
chrono = "0.4.38"
glob = "0.3.1"
native-tls = "0.2.12"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
syn = "2.0.76"
dewey-macros = { path = "../dewey-macros" }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
ordered-float = "4.5.0"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
