[package]
name = "prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#wire = { git = "https://github.com/JTan2231/wire.git" }
wire = { path = "../../wire/crates/wire" }
lazy_static = "1.4"
fuzzy-matcher = "*"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
