[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28.1"
crossterm = "0.27.0"
tempfile = "3"
tokio = { version = "1.28", features = ["full"] }
#wire = { git = "https://github.com/JTan2231/wire.git" }
wire = { path = "../../wire/crates/wire" }
prompts = { path = "../prompts" }
colored = "2"
