[package]
name = "vizier"
version = "0.1.0"
edition = "2024"

[features]
integration_testing = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = { version = "4.5.2", features = ["unstable-dynamic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
uuid = { version = "1.4", features = ["v4"] }
git2 = "0.20"
vizier-core = { path = "../vizier-core" }
