[package]
name = "vizier-core"
version = "0.1.0"
edition = "2024"

[features]
mock_llm = []
integration_testing = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = "0.35.0"
sqlite-vec = "0.1.6"
zerocopy = "0.8.25"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3"
wire = { git = "https://github.com/JTan2231/wire.git" }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
fuzzy-matcher = "*"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
uuid = { version = "1.4", features = ["v4"] }
git2 = "0.20"
crossterm = "0.27.0"
once_cell = "1"
parking_lot = "0.12"
ratatui = "0.28.1"
