[package]
name = "vizier-core"
version = "0.1.0"
edition = "2024"

[features]
mock_llm = []
integration_testing = []

[dependencies]
grep-searcher = "0.1"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
toml = "0.8"
fuzzy-matcher = "*"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
uuid = { version = "1.4", features = ["v4"] }
git2 = "0.20"
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
